setup friend page

--- a/friend.html
+++ b/friend.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="profile.html">Profile</a>
-    <a href="friend.html">Friend</a>
+    <p><b>Student Number:</b> 662115050</p>
+    <p><b>Name:</b> Sattaya Mingsanthia</p>
   </body>
 </html>
