--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a href="camt.html">CAMT</a>
     <a href="friend.html">Friend</a>
     <img src="friend.jpg">
-    <p>To be continue</p>
+    <img src="camt.png">
   </body>
 </html>
